Added new parameters to datepicker

--- a/datepicker/src/lib/datepicker-content.html
+++ b/datepicker/src/lib/datepicker-content.html
@@ -6,6 +6,9 @@
     [startView]="datepicker.startView"
     [clockStep]="datepicker.clockStep"
     [twelveHour]="datepicker.twelveHour"
+    [buttonsLabelCfg]="datepicker.buttonsLabelCfg"
+    [showOkButton]="datepicker.showOkButton"
+    [showCancelButton]="datepicker.showCancelButton"
     [minDate]="datepicker._minDate"
     [maxDate]="datepicker._maxDate"
     [dateFilter]="datepicker._dateFilter"
