--- a/datepicker/src/lib/datepicker-content.html
+++ b/datepicker/src/lib/datepicker-content.html
@@ -9,6 +9,7 @@
     [buttonsLabelCfg]="datepicker.buttonsLabelCfg"
     [showOkButton]="datepicker.showOkButton"
     [showCancelButton]="datepicker.showCancelButton"
+    [showClearButton]="datepicker.showClearButton"
     [minDate]="datepicker._minDate"
     [maxDate]="datepicker._maxDate"
     [dateFilter]="datepicker._dateFilter"
